# IntelliSat

./: .clangd  .cproject  .editorconfig  .gitignore  .gitmodules  .project  ADCS.c  ADCS.h  CMakeLists.txt  FreeRTOSConfig.h  IntelliSat Debug.cfg  LICENSE  README.md  STM32L476ZGTX_FLASH.ld  STM32L476ZGTX_RAM.ld  THIRD_PARTY_NOTICES.md  compile_commands.json  compile_flags.txt  config.mk  debug.clangd  loggers_interface.h  makefile  release.clangd  sources.mk  vcpkg-configuration.json  virtual_intellisat.h  virtual_ros.h
ADCS/: ADCS.h  virtual_intellisat.h
Drivers/CMSIS/: cmsis_compiler.h  core_cm4.h
Drivers/Device/: stm32l476xx.h
Manuals/: Getting_Started.md  Intro.md
Manuals/CubeIDE_instructions/: Build_Test_Debug.md  Building_Testing_Project.md  Cloning.md  (+4 more)
Src/: DMA_ADC_test.c  branch_main.c  branch_main.h  globals.h  hdd_rpm_test.c  hdd_training_test.c  main.c  oldmain.c  platform_init.h  virtual_intellisat.c
Src/loggers/: CMakeLists.txt  downlink_logs.c  downlink_logs.h  downlink_testing.c  event_logger.c  event_logger.h  experiment_logger.c  experiment_logger.h  fits_in_bits.c  fits_in_bits.h  logger_to_flash.c  logger_to_flash.h  loggers_testing.c  loggers_to_fram.c  loggers_to_fram.h
Src/loggers/mockup_flash/: flash.c  flash.h
Startup/: startup_stm32l476zgtx.s
adcs_math/: calibration.c  calibration.h  matrix.c  quaternion.c  quaternion.h  sensors.c  sensors.h  vector.c
cmake/: st-project.cmake
determination/: determination.c
docs/: open_concerns_low_pwr_mode.md
groundstation/: gs_config.txt  inrangemakefile  most_recent_tle.txt
(+347 files in other folders)
